--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     color: white;
 }
 .conteiner{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -28,7 +28,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin: 10%;   
+    padding-left: 20%;   
 }
 
 .logo{
@@ -54,12 +54,13 @@
     gap: 10px;
     margin: 20px;
 }
+
 .cadastro > button{
     width: 90px;
     height: 30px;
     background-color: #7c51f3;
     border: none;
-    border-radius: 10px;
+    border-radius: 25px;
 }
 
 .cadastro > button:hover{
@@ -76,17 +77,19 @@
 }
 
 .contorno{
-    width: 400px;
+    width: 60%;
     height: auto;
     padding: 20px;
     display: flex;
-    gap: 50px;
+    gap: 30px;
     flex-direction: column;
     justify-content: center;
     text-align: center; 
     background-color: #14232a;
     border-radius: 25px;
     box-shadow: 0px 0px 50px rgba(124, 81, 243, 0.2);
+    box-sizing: border-box;
+    min-width: 300px;
 }
 
 .bem_vindo > h1{
@@ -116,11 +119,17 @@
     border-radius: 25px;
     padding: 0px 20px;
     color: rgb(255, 255, 255);
-    background-color: #132028;
+    background-color: rgb(69,90,100);
     outline: none;
     border: none;
 }
 
+.redefinir{
+    Display: flex;
+    font-size: 12px;
+    justify-content: center;
+    gap: 10px;
+}
 .contorno > button{
     background-color: #7c51f3;
     border: none;
@@ -131,27 +140,204 @@
 .contorno > button:hover{
     background-color: #9070e6;
     cursor: pointer;
-    box-shadow: 0px 0px 10px #7c51f3;
 }
 .google{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #132028;
+    background-color: rgb(69,90,100);
     border-radius: 25px;
 }
 
 .google:hover{
     cursor: pointer;
-    background-color: #14232a;
-    box-shadow: 0px 0px 10px rgba(124, 81, 243, 0.5);
+    background-color: #1d323b;
+   
 }
 
 .google > img{
     width: 10%;
 
 } 
-
-@media screen {
-    
+.cadastro2{
+    display: none;
 }
+
+@media (max-width: 450px){
+    *{
+        margin: 0;
+        padding: 0;
+        font-family: "poppins";
+        color: white;
+    }
+    .conteiner{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #132028;
+    
+    }    
+    
+    .left_login{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        padding: 0;   
+    }
+    
+    .logo{
+        font-family: "boba.ttf";
+        font-size: 100px;
+        letter-spacing: 3px;
+        color: #7c51f3;
+    }
+    
+    .book_time{
+        max-width: 500px;
+        width: 100%;
+        display: none;
+    }
+    
+    .novo_por{
+        color: #7c51f3;
+        display: none;
+    }
+    
+    .cadastro{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        margin: 20px;
+        display: none;
+    }
+    
+    .cadastro > button{
+        width: 90px;
+        height: 30px;
+        background-color: #7c51f3;
+        border: none;
+        border-radius: 25px;
+    }
+    
+    .cadastro > button:hover{
+        background-color: #9070e6;
+        cursor: pointer;
+    }
+    
+    .right_login{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10%; 
+    }
+    
+    .contorno{
+        width: 60%;
+        height: auto;
+        padding: 20px;
+        display: flex;
+        gap: 30px;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center; 
+        background-color: #14232a;
+        border-radius: 25px;
+        box-shadow: 0px 0px 50px rgba(124, 81, 243, 0.2);
+        box-sizing: border-box;
+        min-width: 300px;
+    }
+    
+    .bem_vindo > h1{
+        color: #7c51f3;
+    }
+    
+    .login_input{
+        width: 100%;
+        display: flex;
+        flex-direction: column; 
+        gap: 20px;
+        
+    }
+    
+    .input{
+        display: grid;
+        
+    
+    }
+    .input > label{
+        display: flex;
+        margin: 5px;
+    }    
+    
+    .input > input{
+        height: 40px;
+        border-radius: 25px;
+        padding: 0px 20px;
+        color: rgb(255, 255, 255);
+        background-color: rgb(69,90,100);
+        outline: none;
+        border: none;
+    }
+    
+    .redefinir{
+        Display: flex;
+        font-size: 12px;
+        justify-content: center;
+        gap: 10px;
+    }
+    .contorno > button{
+        background-color: #7c51f3;
+        border: none;
+        border-radius: 25px;
+        height: 40px;
+    }
+    
+    .contorno > button:hover{
+        background-color: #9070e6;
+        cursor: pointer;
+    }
+    .google{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(69,90,100);
+        border-radius: 25px;
+    }
+    
+    .google:hover{
+        cursor: pointer;
+        background-color: #1d323b;
+       
+    }
+    
+    .google > img{
+        width: 10%;
+    
+    } 
+
+    .cadastro2{
+        display: flex;
+        gap: 10px;
+        justify-content: center;
+        margin-top: 70px;
+    }
+    .cadastro2 > button{
+        width: 90px;
+        height: 30px;
+        background-color: #7c51f3;
+        border: none;
+        border-radius: 25px;
+    }
+    
+    .cadastro2 > button:hover{
+        background-color: #9070e6;
+        cursor: pointer;
+    }
+}
+
