--- a/style.css
+++ b/style.css
@@ -55,7 +55,11 @@
     margin: 20px;
 }
 
-.cadastro > button{
+.contorno > .button{
+    width: 100%;
+}
+
+.button{
     width: 90px;
     height: 30px;
     background-color: #7c51f3;
@@ -63,7 +67,7 @@
     border-radius: 25px;
 }
 
-.cadastro > button:hover{
+.button:hover{
     background-color: #9070e6;
     cursor: pointer;
 }
@@ -87,7 +91,7 @@
     text-align: center; 
     background-color: #14232a;
     border-radius: 25px;
-    box-shadow: 0px 0px 50px rgba(124, 81, 243, 0.2);
+    box-shadow: 0px 0px 50px rgba(7, 6, 10, 0.2);
     box-sizing: border-box;
     min-width: 300px;
 }
@@ -109,6 +113,7 @@
     
 
 }
+
 .input > label{
     display: flex;
     margin: 5px;
@@ -130,17 +135,7 @@
     justify-content: center;
     gap: 10px;
 }
-.contorno > button{
-    background-color: #7c51f3;
-    border: none;
-    border-radius: 25px;
-    height: 40px;
-}
 
-.contorno > button:hover{
-    background-color: #9070e6;
-    cursor: pointer;
-}
 .google{
     display: flex;
     align-items: center;
@@ -159,185 +154,64 @@
     width: 10%;
 
 } 
+
 .cadastro2{
     display: none;
 }
 
-@media (max-width: 450px){
-    *{
-        margin: 0;
-        padding: 0;
-        font-family: "poppins";
-        color: white;
-    }
+@media (max-width: 500px){
     .conteiner{
         width: 100%;
         height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 2fr 1fr;
+        row-gap: 20px;
         align-items: center;
-        background-color: #132028;
-    
-    }    
-    
-    .left_login{
-        display: flex;
-        flex-direction: column;
         justify-content: center;
-        text-align: center;
-        padding: 0;   
+        
     }
-    
-    .logo{
-        font-family: "boba.ttf";
-        font-size: 100px;
-        letter-spacing: 3px;
-        color: #7c51f3;
-    }
-    
+
     .book_time{
-        max-width: 500px;
-        width: 100%;
         display: none;
     }
-    
-    .novo_por{
-        color: #7c51f3;
-        display: none;
-    }
-    
+
     .cadastro{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        margin: 20px;
         display: none;
     }
-    
-    .cadastro > button{
-        width: 90px;
-        height: 30px;
-        background-color: #7c51f3;
-        border: none;
-        border-radius: 25px;
+
+    .left_login{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
     }
+
     
-    .cadastro > button:hover{
-        background-color: #9070e6;
-        cursor: pointer;
-    }
     
     .right_login{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 10%; 
-    }
-    
-    .contorno{
-        width: 60%;
-        height: auto;
-        padding: 20px;
-        display: flex;
-        gap: 30px;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center; 
-        background-color: #14232a;
-        border-radius: 25px;
-        box-shadow: 0px 0px 50px rgba(124, 81, 243, 0.2);
-        box-sizing: border-box;
-        min-width: 300px;
-    }
-    
-    .bem_vindo > h1{
-        color: #7c51f3;
-    }
-    
-    .login_input{
+        margin: 0;
+        padding: 0;
         width: 100%;
-        display: flex;
-        flex-direction: column; 
-        gap: 20px;
-        
-    }
-    
-    .input{
-        display: grid;
-        
-    
-    }
-    .input > label{
-        display: flex;
-        margin: 5px;
-    }    
-    
-    .input > input{
-        height: 40px;
-        border-radius: 25px;
-        padding: 0px 20px;
-        color: rgb(255, 255, 255);
-        background-color: rgb(69,90,100);
-        outline: none;
-        border: none;
-    }
-    
-    .redefinir{
-        Display: flex;
-        font-size: 12px;
+        height: 100%;
         justify-content: center;
-        gap: 10px;
-    }
-    .contorno > button{
-        background-color: #7c51f3;
-        border: none;
-        border-radius: 25px;
-        height: 40px;
-    }
-    
-    .contorno > button:hover{
-        background-color: #9070e6;
-        cursor: pointer;
-    }
-    .google{
-        display: flex;
         align-items: center;
-        justify-content: center;
-        background-color: rgb(69,90,100);
-        border-radius: 25px;
     }
-    
-    .google:hover{
-        cursor: pointer;
-        background-color: #1d323b;
-       
+
+    .contorno{
+        width: 80%;
+        height: 100%;
+        
     }
-    
-    .google > img{
-        width: 10%;
-    
-    } 
 
     .cadastro2{
+        width: 100%;
+        height: 50%;
         display: flex;
-        gap: 10px;
+        position: relative;
+        gap: 15px;
+        align-items: end;
         justify-content: center;
-        margin-top: 70px;
-    }
-    .cadastro2 > button{
-        width: 90px;
-        height: 30px;
-        background-color: #7c51f3;
-        border: none;
-        border-radius: 25px;
-    }
-    
-    .cadastro2 > button:hover{
-        background-color: #9070e6;
-        cursor: pointer;
     }
 }
 
