--- a/style_index.css
+++ b/style_index.css
@@ -4,8 +4,10 @@
     font-family: 'poppins';
 }
 .conteiner{
-    width: 100vw;
-    height: 100vh; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    background-color: RGB(19, 32, 40);
 }
 .header{
     display: grid;
@@ -58,4 +60,43 @@
     margin-left: 10px;
 }
 
+.main{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    margin: 2%;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+    max-width: 1080px;
+}
+
+.loja1{
+    display: flex;
+    flex-direction: column;
+    background-color: RGB(69, 90, 100);
+    border-radius: 25px;
+    color: white;
+    width: 100;
+    height: 100;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2) ;
+}
+.banner{
+    width: 100%;
+    border-radius: 25px 25px 0px 0px;
+}
+
+.fotoPerfil{
+    position: absolute;
+    width: 10%;
+    
+}
+.text{
+    margin: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+}
+ 
 
